force-app/main/default/objects/Survey__c/fields/Additional_comments_on_support_exp__c.field-meta.xml
<CustomField>
    <fullName>Additional_comments_on_support_exp__c</fullName>
    <label>Additional comments on support exp</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>