force-app/main/default/objects/Survey__c/fields/Additional_Request__c.field-meta.xml
<CustomField>
    <fullName>Additional_Request__c</fullName>
    <label>Additional Request</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I have additional feedback and would lik</fullName>
            </value>
            <value>
                <fullName>I do not wish to share my name, company&apos;</fullName>
            </value>
            <value>
                <fullName>I would like someone from your managemen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>