force-app/main/default/objects/Survey__c/fields/Analyst_s_Technical_Skills_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Analyst_s_Technical_Skills_Knowledge__c</fullName>
    <label>Analyst&apos;s Technical Skills/Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>