force-app/main/default/objects/Survey__c/fields/Analyst_s_Technical_Skills_Knowledge_num__c.field-meta.xml
<CustomField>
    <fullName>Analyst_s_Technical_Skills_Knowledge_num__c</fullName>
    <formula>CASE (TEXT(Analyst_s_Technical_Skills_Knowledge__c),
&quot;Dissatisfied&quot;, 1,
&quot;Insatisfecho&quot;, 1,
&quot;Somewhat Dissatisfied&quot;, 2,
&quot;Algo Satisfecho&quot;, 2,
&quot;Neutral&quot;, 3,
&quot;Satisfied&quot;, 4,
&quot;Satisfecho&quot;, 4,
&quot;Very Satisfied&quot;, 5,
&quot;Muy Satisfecho&quot;, 5,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analyst&apos;s Technical Skills/Knowledge #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>