force-app/main/default/objects/Survey__c/fields/Answer_10__c.field-meta.xml
<CustomField>
    <fullName>Answer_10__c</fullName>
    <label>Answer 10</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>