force-app/main/default/objects/Survey__c/fields/Answer_11__c.field-meta.xml
<CustomField>
    <fullName>Answer_11__c</fullName>
    <label>Answer 11</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>