force-app/main/default/objects/Survey__c/fields/Average_Length_of_Haul_CAP__c.field-meta.xml
<CustomField>
    <fullName>Average_Length_of_Haul_CAP__c</fullName>
    <description>Used for CAP data collection.</description>
    <label>Average Length of Haul (CAP)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local (Less than 100 miles)</fullName>
            </value>
            <value>
                <fullName>Regional (100-500 miles)</fullName>
            </value>
            <value>
                <fullName>Long-haul (More than 500 miles)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>