force-app/main/default/objects/Survey__c/fields/Avg_Stops_Per_Vehicle_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Avg_Stops_Per_Vehicle_Per_Day__c</fullName>
    <label>Avg Stops Per Vehicle Per Day</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>