force-app/main/default/objects/Survey__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Case Business Unit</description>
    <formula>TEXT(Case__r.Business_Unit__c)</formula>
    <inlineHelpText>Business Unit on the Case record</inlineHelpText>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>