force-app/main/default/objects/Survey__c/fields/CAP_Status__c.field-meta.xml
<CustomField>
    <fullName>CAP_Status__c</fullName>
    <description>Used for CAP survey data collection.</description>
    <label>CAP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>