force-app/main/default/objects/Survey__c/fields/Carrier_Type_CAP__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Type_CAP__c</fullName>
    <description>Used for CAP survey data collection.</description>
    <label>Carrier Type (CAP)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>For Hire</fullName>
            </value>
            <value>
                <fullName>Private Fleet</fullName>
            </value>
            <value>
                <fullName>Private Fleet w/ For Hire Authority</fullName>
            </value>
            <value>
                <fullName>Owner/Operator</fullName>
            </value>
            <value>
                <fullName>Independent Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>