force-app/main/default/objects/Survey__c/fields/Company_Drivers_CAP__c.field-meta.xml
<CustomField>
    <fullName>Company_Drivers_CAP__c</fullName>
    <description>Used for CAP data collection.</description>
    <label># Company Drivers (CAP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>