force-app/main/default/objects/Survey__c/fields/Contact_survey_lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_survey_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used as a lookup relationship to Contacts for surveys.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>