force-app/main/default/objects/Survey__c/fields/Courtesy_and_Professionalism_of_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_and_Professionalism_of_Analyst__c</fullName>
    <label>Courtesy and Professionalism of Analyst</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>