force-app/main/default/objects/Survey__c/fields/CSAT_Account__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSAT Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CSAT Surveys</relationshipLabel>
    <relationshipName>CSATSurveys</relationshipName>
    <type>Lookup</type>
</CustomField>