force-app/main/default/objects/Survey__c/fields/Currently_using_SaaS_products__c.field-meta.xml
<CustomField>
    <fullName>Currently_using_SaaS_products__c</fullName>
    <label>Currently using SaaS products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>