force-app/main/default/objects/Survey__c/fields/Driver_Safety_Solution__c.field-meta.xml
<CustomField>
    <fullName>Driver_Safety_Solution__c</fullName>
    <description>Used for CAP survey data collection.</description>
    <label>Driver Safety Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meritor Wabco</fullName>
            </value>
            <value>
                <fullName>Bendix</fullName>
            </value>
            <value>
                <fullName>Mobileye</fullName>
            </value>
            <value>
                <fullName>Iteris</fullName>
            </value>
            <value>
                <fullName>None / In-house, Custom</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>