force-app/main/default/objects/Survey__c/fields/eLog_Solution__c.field-meta.xml
<CustomField>
    <fullName>eLog_Solution__c</fullName>
    <label>eLog Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Big Roads</fullName>
            </value>
            <value>
                <fullName>Blue Tree Systems</fullName>
            </value>
            <value>
                <fullName>Cadec</fullName>
            </value>
            <value>
                <fullName>CarrierWeb</fullName>
            </value>
            <value>
                <fullName>CoolTrax</fullName>
            </value>
            <value>
                <fullName>Discrete Wireless / NextTraq</fullName>
            </value>
            <value>
                <fullName>FleetLocate/Spireon</fullName>
            </value>
            <value>
                <fullName>FleetMatics/SageQuest</fullName>
            </value>
            <value>
                <fullName>Forward Thinking</fullName>
            </value>
            <value>
                <fullName>Garmin</fullName>
            </value>
            <value>
                <fullName>Geotab</fullName>
            </value>
            <value>
                <fullName>GPS Insight</fullName>
            </value>
            <value>
                <fullName>JJ Keller</fullName>
            </value>
            <value>
                <fullName>Lytx, Inc. formerly known as DriveCam, Inc.</fullName>
            </value>
            <value>
                <fullName>Navman Wireless</fullName>
            </value>
            <value>
                <fullName>NetworkFleet</fullName>
            </value>
            <value>
                <fullName>Omnitracs</fullName>
            </value>
            <value>
                <fullName>PeopleNet (Trimble Company)</fullName>
            </value>
            <value>
                <fullName>RAND McNally/DriverTech</fullName>
            </value>
            <value>
                <fullName>RapidLog</fullName>
            </value>
            <value>
                <fullName>Skybitz</fullName>
            </value>
            <value>
                <fullName>Teletrac</fullName>
            </value>
            <value>
                <fullName>Telogis</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>Webtech Wireless</fullName>
            </value>
            <value>
                <fullName>XRS/Xata Turnpike</fullName>
            </value>
            <value>
                <fullName>Zonar Systems</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Paper Logs / None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>