force-app/main/default/objects/Survey__c/fields/Familiar_w_Omnitracs_before_contact__c.field-meta.xml
<CustomField>
    <fullName>Familiar_w_Omnitracs_before_contact__c</fullName>
    <label>Familiar w/ Omnitracs before contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Familiar</fullName>
                <color>#0B6FCE</color>
                <label>Very Familiar</label>
            </value>
            <value>
                <fullName>Familiar</fullName>
                <color>#78C953</color>
                <label>Familiar</label>
            </value>
            <value>
                <fullName>Somewhat Familiar</fullName>
                <color>#FF9900</color>
                <label>Somewhat Familiar</label>
            </value>
            <value>
                <fullName>Not Familiar At All</fullName>
                <color>#FF0000</color>
                <label>Not Familiar At All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>