force-app/main/default/objects/Survey__c/fields/Fleet_Maintenance_Solution__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Maintenance_Solution__c</fullName>
    <description>Used for CAP survey data collection.</description>
    <label>Fleet Maintenance Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AssetWorks</fullName>
            </value>
            <value>
                <fullName>TMT / TMW Systems</fullName>
            </value>
            <value>
                <fullName>Certaris</fullName>
            </value>
            <value>
                <fullName>Arsenault / Dossier</fullName>
            </value>
            <value>
                <fullName>Maximo (IBM)</fullName>
            </value>
            <value>
                <fullName>Vnomics</fullName>
            </value>
            <value>
                <fullName>None / In-house, Custom</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>