force-app/main/default/objects/Survey__c/fields/General_Impression_of_Omnitracs__c.field-meta.xml
<CustomField>
    <fullName>General_Impression_of_Omnitracs__c</fullName>
    <label>General Impression of Omnitracs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Favorable</fullName>
                <color>#0B6FCE</color>
                <label>Very Favorable</label>
            </value>
            <value>
                <fullName>Favorable</fullName>
                <color>#78C953</color>
                <label>Favorable</label>
            </value>
            <value>
                <fullName>Somewhat Favorable</fullName>
                <color>#FF9900</color>
                <label>Somewhat Favorable</label>
            </value>
            <value>
                <fullName>Not Favorable At All</fullName>
                <color>#FF0000</color>
                <label>Not Favorable At All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>