force-app/main/default/objects/Survey__c/fields/If_other_safety_soln_please_specify__c.field-meta.xml
<CustomField>
    <fullName>If_other_safety_soln_please_specify__c</fullName>
    <description>Used for CAP survey data collection.</description>
    <label>If other safety soln, please specify</label>
    <length>100</length>
    <type>Text</type>
</CustomField>