force-app/main/default/objects/Survey__c/fields/In_cab_media_content_delivery_100_200__c.field-meta.xml
<CustomField>
    <fullName>In_cab_media_content_delivery_100_200__c</fullName>
    <description>Used for CAP survey data collection.</description>
    <label>In-cab media content delivery (100-200)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 – Not Interested</fullName>
            </value>
            <value>
                <fullName>2 – A Little Interested</fullName>
            </value>
            <value>
                <fullName>3 – Somewhat Interested</fullName>
            </value>
            <value>
                <fullName>4 – Interested</fullName>
            </value>
            <value>
                <fullName>5 – Very Interested</fullName>
            </value>
            <value>
                <fullName>6 – Currently Using</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>